
classDiagram
    class Game {
        -board: Board
        -snake: Snake
        -food: Food
        -score: int
        +__init__() None
        +run() None
        +handle_events() None
        +update() None
        +render() None
    }
    class Board {
        -width: int
        -height: int
        -grid: list
        +__init__(width: int, height: int) None
        +draw_grid() None
    }
    class Snake {
        -body: list
        -direction: str
        +__init__() None
        +move() None
        +grow() None
    }
    class Food {
        -x: int
        -y: int
        +__init__() None
        +generate_new_position() None
    }
    Game --> Board
    Game --> Snake
    Game --> Food
    Snake --> Board
